lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__too-small-71x17-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"┌Landscape Kit────────────────────────────────────────────────────────┐"
"│              Terminal too small (needs at least 72x18)              │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"└─────────────────────────────────────────────────────────────────────┘"
