lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__too-small-71x17-zh.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"┌Landscape Kit────────────────────────────────────────────────────────┐"
"│                   终端尺寸过小（至少需要 72x18）                    │" Hidden by multi-width symbols: [(21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (49, " ")]
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"└─────────────────────────────────────────────────────────────────────┘"
