lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__update-panel-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Update──────────────────────────────────────────────────────────────────┐"
"│  Overview            ││Current version  1.2.3                                                    │"
"│  Install             ││                                                                          │"
"│  Backup              ││> Version          latest                                                 │"
"│> Update              ││  Repository       Current source (http: https://example.com/releases/)   │"
"│  Mirror              ││                   [ Start update ]                                       │"
"│  Common software     ││                                                                          │"
"│  Reinit              ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Up/Down Field  Left/Right Change  Enter Select  Tab Menu  Esc Menu                     "
