lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__wizard-confirm-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape network takeover                                                                          "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Network───────────────────────────────────────────────────────────────────────────────────────────┐"
"│Confirm network takeover plan                                                                     │"
"│                                                                                                  │"
"│WAN interface  ens32  MAC 00:0c:29:a4:09:08                                                       │"
"│WAN mode       Static  10.1.1.105/24  gw 10.1.1.1                                                 │"
"│LAN mode       WAN-only (no bridge, no LAN DHCP)                                                  │"
"│                                                                                                  │"
"│Selected LAN interfaces will have their IPv4/IPv6 addresses flushed; unselected interfaces remain │"
"│unchanged.                                                                                        │"
"│Press Enter to start installation.                                                                │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Enter start installation  Esc back                                                                  "
"                                                                                                    "
