lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__wizard-wan-config-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape network takeover                                                                          "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Network───────────────────────────────────────────────────────────────────────────────────────────┐"
"│WAN IPv4 mode                                                                                     │"
"│                                                                                                  │"
"│[ Static ]  [ DHCP client ]                                                                       │"
"│                                                                                                  │"
"│  IPv4 address/CIDR           10.1.1.105/24                                                       │"
"│  Default gateway             10.1.1.1                                                            │"
"│                                                                                                  │"
"│  [ Confirm and continue ]                                                                        │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Left/Right Switch mode  Up/Down Move  Enter Confirm  Esc Back                                       "
"                                                                                                    "
