lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__wizard-wan-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape network takeover                                                                          "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Network───────────────────────────────────────────────────────────────────────────────────────────┐"
"│Select the WAN interface                                                                          │"
"│                                                                                                  │"
"│> 1  ens32  00:0c:29:a4:09:08  10.1.1.105/24  gw not found                                        │"
"│  2  ens33  00:0c:29:a4:09:12  no IPv4  gw not found                                              │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Up/Down select WAN  Enter confirm  Esc cancel wizard                                                "
"                                                                                                    "
